[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
base64 = "0.21"
bs58 = "0.5"
thiserror = "1.0"
rand = "0.8"
getrandom = "0.2"
