[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
serde_urlencoded = "0.7"
bs58 = "0.5"
base64 = "0.21"
thiserror = "1.0"
ed25519-dalek = "1.0"
rand = "0.8"
solana-sdk = "1.18"
spl-token = "4.0"
